Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23788

breakpoints are not respected on macos symlinked folder

    XMLWordPrintable

Details

    • macOS
    • 5838b40c6d5cd9f76865edd1379c301ecea976c1 (qt-creator/qt-creator/master)

    Description

      If i create a simple project in a directory, then i symlink the folder to another name and open the project from qtcreator from the symlinked folder then the breakpoints are not respected by debugger.

       

      Steps to reproduce:

      1. create a project in a folder myproj
      2. symlink myproj to myproj_link
      3. open the project from qtcreator from myproj_link folder
      4. try to set a breakpoint and debug the project

      what happens is that the breakpoints are not respected and the program keeps going.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-23788
        # Subject Branch Project Status CR V

        Activity

          People

            con Eike Ziller
            flamonica Francesco
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes