Enforce PWD in the environment of build steps

In the shell PWD can be different from the "real" working directory,
because the latter never contains symbolic links (getcwd).
E.g. Clang uses PWD as the basis for debug information.

Fixes: QTCREATORBUG-23788
Change-Id: I19f06dcfded5ccca2dc0162a3a543cdc756bffb0
Reviewed-by: hjk <hjk@qt.io>
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>